--- a/lab1.html
+++ b/lab1.html
@@ -1,3 +1,3 @@
-Дисконт (англ. <i>discount</i>) — экономический термин, в буквальном переводе 
+<b>Дисконт</b>(англ. <i>discount</i>) — экономический термин, в буквальном переводе 
 с английского означает <i>скидка</i>, <i>вычет</i>, <I>разница</I>[1]. 
 В зависимости от контекста, может принимать различные значения.
