--- a/lab1.html
+++ b/lab1.html
@@ -1,6 +1,9 @@
 <h1>Дисконт</h1>
 
 <p>
+    <img src="discount1.jpg">
+</p>
+<p>
     <b>Дисконт</b>(англ. <i>discount</i>) — <B>экономический термин</B>, в буквальном переводе 
     с английского означает <i>скидка</i>, <i>вычет</i>, <I>разница</I>[1]. 
     В зависимости от <b>контекста</b>, может принимать различные значения.
