--- a/lab1.html
+++ b/lab1.html
@@ -21,5 +21,9 @@
     объём продаж и, следовательно, достичь экономии от масштаба,
     или используются, как уловка, чтобы заручиться «верностью»
     клиента, или предоставляются по требованию крупного и
-    влиятельного покупателя.
+    влиятельного покупателя.  
+</p>
+<p>
+    <img src="discount2.jpg" width="45%">
+    <img src="discount3.jpg" width="45%">
 </p>
