--- a/lab1.html
+++ b/lab1.html
@@ -61,52 +61,92 @@
             сроком действия один год была приобретена за 900, то <b>дисконт</b> по
             стоимости погашения соответствует <u>процентной</u> ставке:
             (1000-900)/900=11,1% по займу.
-            </p>
+        </p>
 
-            <h2>Дисконт на валютном рынке</h2>
+        <h2>Дисконт на валютном рынке</h2>
 
-            <p>
-                <b>Дисконтом</b> на валютном рынке называют <i>скидку</i> (вычет) с курса
-                валюты по наличным, кассовым операциям, если предполагается,
-                что её курс будет понижаться между датами заключения и
-                исполнения сделки. Здесь противоположным понятием является
-                премия — когда при сделке на срок валюта котируется дороже,
-                чем по наличным сделкам<sup>[1]</sup>.
-            </p>
+        <p>
+            <b>Дисконтом</b> на валютном рынке называют <i>скидку</i> (вычет) с курса
+            валюты по наличным, кассовым операциям, если предполагается,
+            что её курс будет понижаться между датами заключения и
+            исполнения сделки. Здесь противоположным понятием является
+            премия — когда при сделке на срок валюта котируется дороже,
+            чем по наличным сделкам<sup>[1]</sup>.
+        </p>
 
-            <h2>Дисконт на фондовом рынке</h2>
+        <h2>Дисконт на фондовом рынке</h2>
 
-            <p>
-                На фондовом рынке под <b>дисконтом</b> понимают <i>скидку</i> в <u>процентах</u>
-                с номинальной стоимости ценной бумаги. Например, если
-                облигацию с номиналом 1000 $ продают за 900 $, <b>дисконт</b>
-                составляет 10 %. <b>Дисконтом</b> также называют разницу между
-                <b><i><u>ценой</u></i></b> ценной бумаги при её реализации и при погашении<sup>[1]</sup>.
-            </p>
+        <p>
+            На фондовом рынке под <b>дисконтом</b> понимают <i>скидку</i> в <u>процентах</u>
+            с номинальной стоимости ценной бумаги. Например, если
+            облигацию с номиналом 1000 $ продают за 900 $, <b>дисконт</b>
+            составляет 10 %. <b>Дисконтом</b> также называют разницу между
+            <b><i><u>ценой</u></i></b> ценной бумаги при её реализации и при погашении<sup>[1]</sup>.
+         </p>
 
-            <h2>Дисконт в денежном обращении</h2>
+        <h2>Дисконт в денежном обращении</h2>
 
-            <p>
-                В денежном обращении <b>дисконтом</b> называют обесценивание
-                одних видов денег по отношению к другим, параллельно
-                обращающимся (например, бумажных денег по отношению к
-                золотым монетам)<sup>[1]</sup>.
-            </p>
+        <p>
+            В денежном обращении <b>дисконтом</b> называют обесценивание
+            одних видов денег по отношению к другим, параллельно
+            обращающимся (например, бумажных денег по отношению к
+            золотым монетам)<sup>[1]</sup>.
+        </p>
 
-            <h2>Дисконт в теории игр</h2>
+        <h2>Дисконт в теории игр</h2>
 
-            <p>
-                В теории игр — текущая стоимость денежной единицы будущего
-                периода, умноженная на вероятность повторения игры для игр с
-                неизвестным числом повторений.
-            </p>
+        <p>
+            В теории игр — текущая стоимость денежной единицы будущего
+            периода, умноженная на вероятность повторения игры для игр с
+            неизвестным числом повторений.
+        </p>
 
-            <h2>Залоговый дисконт</h2>
+        <h2>Залоговый дисконт</h2>
 
-            <p>
-                Разница между реальной рыночной стоимостью залогового
-                имущества и его залоговой стоимостью, используемой для
-                определения суммы выдаваемого банком кредита.
-            </p> 
+        <p>
+            Разница между реальной рыночной стоимостью залогового
+            имущества и его залоговой стоимостью, используемой для
+            определения суммы выдаваемого банком кредита.
+        </p> 
+
+        <h2>Выплаты по кредиту на 3 месяца</h2>
+
+        <table border="1" width="100%">
+            <tr>
+                <td><b>Дата</b></td>
+                <td><b>Платеж</b></td>
+                <td><b>Проценты</b></td>
+                <td><b>Тело кредита</b></td>
+                <td><b>Остаток</b></td>
+            </tr>
+            <tr>
+                <td>09.02.2023</td>
+                <td>0,00</td>
+                <td>0,00</td>
+                <td>0,00</td>
+                <td>100 000,00</td>
+            </tr>
+            <tr>
+                <td>09.03.2023</td>
+                <td>33 611,50</td>
+                <td>383,56</td>
+                <td>33 227,94</td>
+                <td>66 772,06</td>
+            </tr>
+            <tr>
+                <td>09.04.2023</td>
+                <td>33 611,50</td>
+                <td>283,55</td>
+                <td>33 327,95</td>
+                <td>33 444,11</td>
+            </tr>
+            <tr>
+                <td>09.05.2023</td>
+                <td>33 581,55</td>
+                <td>137,44</td>
+                <td>33 444,11</td>
+                <td>0,00</td>
+            </tr>
+        </table>
 </body>
 </html>
