--- a/lab2.html
+++ b/lab2.html
@@ -41,6 +41,35 @@
                 дубликатор USB &ndash; лучший компаньон для любого бизнеса.
             </div>
             <h2>Преимущества</h2>
+            <ol>
+                <li>Простое управление</li>
+                <li>Поддержка любого типа флеш носителей и USB жестких дисков</li>
+                <li>Различные режимы копирования
+                    <ul>
+                        <li>синхронный режим</li>
+                        <li>асинхронный режим</li>
+                    </ul>
+                </li>
+                <li>Не требуется время для загрузки и остывания</li>
+                <li>Высокая скорость копирования - 2 Гб/мин</li>
+            </ol>
+            <div>А также:</div>
+            <ol start="6">
+                <li>Автономная система под ключ, компьютер не требуется</li>
+                <li>Копирование и сравнение с оригиналом, что исключает ошибки</li>
+                <li>ЖК-дисплей с отображением всего, что в данный момент делает дубликатор
+                    <ul>
+                        <li>Наглядно</li>
+                        <li>Удобно</li>
+                    </ul>
+                </li>
+            </ol>
+            <div>А еще:</div>
+            <ol start="9">
+                <li>Он очень милый и прикольный</li>
+                <li>Его рекомендуют 9 из 10 дубликатороиспользователей России</li>
+                <li>Он ночью светится</li>
+            </ol>
         </main>
         <footer>
             <hr>
