--- a/lab2.html
+++ b/lab2.html
@@ -70,6 +70,62 @@
                 <li>Его рекомендуют 9 из 10 дубликатороиспользователей России</li>
                 <li>Он ночью светится</li>
             </ol>
+            <table border="1" winght="100%">
+                <tr>
+                    <td><b>Модель</b></td>
+                    <td><b>Количество портов</b></td>
+                    <td><b>Цены, руб</b></td>
+                    <td><b>Наличие</b></td>
+                </tr>
+                <tr>
+                    <td>USB-3 (UB300)</td>
+                    <td>3</td>
+                    <td>50000</td>
+                    <td>В наличии</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-7</td>
+                    <td>8</td>
+                    <td>167700</td>
+                    <td>В наличии</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-15</td>
+                    <td>16</td>
+                    <td>230000</td>
+                    <td>на заказ</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-23</td>
+                    <td>24</td>
+                    <td>по запросу</td>
+                    <td>на заказ</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-31</td>
+                    <td>32</td>
+                    <td>по запросу</td>
+                    <td>на заказ</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-47</td>
+                    <td>48</td>
+                    <td>по запросу </td>
+                    <td>на заказ</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-55</td>
+                    <td>56</td>
+                    <td>по запросу</td>
+                    <td>на заказ</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-63</td>
+                    <td>64</td>
+                    <td>по запросу</td>
+                    <td>на заказ</td>
+                </tr>
+            </table>
         </main>
         <footer>
             <hr>
