--- a/lab2.html
+++ b/lab2.html
@@ -5,7 +5,7 @@
         <title>Крышева В.Д., Тарасова Е.Д. Лабораторная 2</title>
     </head>
     
-    <body style="background-color: aqua;">
+    <body style="background-color: rgb(249, 193, 241);color: rgb(37, 7, 142);font-family: Arial;">
         <header>
             НГТУ, ФБ, Лабораторная работа 2
             <hr>
