--- a/lab2.html
+++ b/lab2.html
@@ -5,10 +5,9 @@
         <title>Крышева В.Д., Тарасова Е.Д. Лабораторная 2</title>
     </head>
     
-    <body style="background-color: rgb(249, 193, 241);color: rgb(37, 7, 142);font-family: Arial;">
-        <header>
+    <body style="background-color: rgb(249, 193, 241);color: rgb(37, 7, 142);font-family: Arial; margin: 0px;">
+        <header style="background-color: rgb(0, 0, 0);color: rgb(147, 244, 181);padding: 10px; font-size: 16pt;">
             НГТУ, ФБ, Лабораторная работа 2
-            <hr>
         </header>
 
         <main>
