--- a/lab2.html
+++ b/lab2.html
@@ -190,8 +190,7 @@
                 </tr>
             </table>
         </main>
-        <footer>
-            <hr>
+        <footer style="background-color: rgb(0, 0, 0);color: rgb(147, 244, 181);padding: 10px; font-size: 16pt;font-style: italic;text-align: right;">
             &copy; Крышева В.Д., Тарасова Е.Д., ФБИ-12, 2 курс, 2023
         </footer>
    </body>
