--- a/lab2.html
+++ b/lab2.html
@@ -75,7 +75,7 @@
             
             <table border="1" width="100%">
                 <tr>
-                    <td colspan="4"><b>USB-дубликаторы серии Super-Tower</b></td>
+                    <td colspan="4" style="text-align: center;"><b>USB-дубликаторы серии Super-Tower</b></td>
                 </tr>
                 <tr>
                     <td><b>Модель</b></td>
@@ -84,19 +84,19 @@
                     <td><b>Наличие</b></td>
                 </tr>
                 <tr>
-                    <td>USB-3 (UB300)</td>
+                    <td>USB-3 (UB300)<sup style="color: red;background-color: yellow;font-style: italic;border-radius: 5px;" title="“Модель USB-3 (UB300) появилась в продаже 01.01.2023">New!</sup></td>
                     <td>3</td>
                     <td>50000</td>
                     <td rowspan="2">В наличии</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-7</td>
+                    <td>Super USB 1-7<sup style="color: red;background-color: yellow;font-style: italic;border-radius: 5px;" title="“Super USB 1-7 появилась в продаже 02.01.2023">New!</sup></td>
                     <td>8</td>
                     <td>167700</td>
                     <!-- <td>В наличии</td> -->
                 </tr>
                 <tr>
-                    <td>Super USB 1-15</td>
+                    <td>Super USB 1-15<sup style="color: red;background-color: yellow;font-style: italic;border-radius: 5px;" title="“Super USB 1-15 появилась в продаже 03.01.2023">New!</sup></td>
                     <td>16</td>
                     <td>230000</td>
                     <td rowspan="6">на заказ</td>
