--- a/lab2.html
+++ b/lab2.html
@@ -133,11 +133,11 @@
                 </tr>
             </table>
 
-            <h2>USB-дубликаторы для жёстких дисков</h2>
+            <h2 style="text-align: center;">USB-дубликаторы для жёстких дисков</h2>
 
             <table border="1" width="100%">
                 <tr>
-                    <td colspan="4"><b>USB-дубликаторы Intelligent Series
+                    <td colspan="4" style="text-align: center;"><b>USB-дубликаторы Intelligent Series
                         <br><i>с поддержкой внешних жестких дисков USB!</i></b>
                         </td>
                 </tr>
@@ -151,7 +151,7 @@
                     <td>Intelligent USB 1-9<sup>A</sup></td>
                     <td>10</td>
                     <td>205&nbsp;000</td>
-                    <td rowspan="2">В наличии</td>
+                    <td rowspan="2" style="background-color: green;">В наличии</td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-19<sup>X</sup></td>
@@ -162,7 +162,7 @@
                     <td>Intelligent USB 1-29<sup>S</sup> </td>
                     <td>30</td>
                     <td>370&nbsp;000</td>
-                    <td rowspan="3">В пути</td>
+                    <td rowspan="3" style="background-color: blue;">В пути</td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-29<sup>G</sup></td>
