--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тарасова Елена Дмитриевна, Крышева Виктория Дмитриевна. Лабораторные работы по WEB-программированию</title>
 </head>
-<body>
-    
+<body style="background-color: rgb(249, 193, 241);color: rgb(37, 7, 142);font-family: Arial; margin: 0px;">
+    <header style="background-color: rgb(0, 0, 0);color: rgb(147, 244, 181);padding: 10px; font-size: 16pt;"> 
+        НГТУ, ФБ, Лабораторная работа 2
+    </header>
+
+    <main>
+        <h1>“Лабораторные работы по WEB-программированию</h1>
+        <ol>
+            <li>
+                <a href="lab1.html" target="_blank" style="color: green; text-decoration: none;">Лабораторная работа 1</a>
+            </li>
+            <li>
+                <a href="lab2.html" target="_blank" style="color: green; text-decoration: none;">Лабораторная работа 2</a>
+            </li>
+        </ol>
+    </main>
+
+    <footer style="background-color: rgb(0, 0, 0);color: rgb(147, 244, 181);padding: 10px; font-size: 16pt;font-style: italic;text-align: right;">
+        &copy; Крышева В.Д., Тарасова Е.Д., ФБИ-12, 2 курс, 2023
+    </footer>
 </body>
 </html>
