--- a/lab2.html
+++ b/lab2.html
@@ -13,6 +13,11 @@
         <main>
             <h1>Дубликатор USB, дубликатор FLASH</h1>
             
+            <ol>
+                <li>
+                    <a href="lab1.html">Лабораторная работа 1</a>
+                </li>
+            </ol>
             <h2>Общая информация</h2>
             
             <div>
