--- a/lab3.html
+++ b/lab3.html
@@ -40,6 +40,22 @@
             margin-left: 2cm;
             text-indent: 0;
         }
+        .shadow {
+            text-shadow: 3px 3px 2px gray;
+        }
+        .blueshadow {
+            text-shadow: -2px 2px 2px blue;
+        }
+        .blur {
+            text-shadow: 0px 0px 3px blue;
+        }
+        .h1 {
+            text-shadow: 0px 0px 0px blue;
+            transition: 500ms 2s;
+        }
+        .h1:hover {
+            text-shadow: 0px 0px 3px blue;
+        }
     </style>
 </head>
 <body>
@@ -48,7 +64,7 @@
     </header>
 
     <main>
-        <h1>Расчет (формула)</h1>
+        <h1 class="h1">Расчет (формула)</h1>
 
         <div>
             Расчет сводится к определению разницы между активами и пассивами
@@ -103,6 +119,10 @@
         <div class="formula">
             Чистые активы = стр.1300 - ЗУ + ДБП
         </div>
+
+        <div class="shadow">Тень</div>
+        <div class="blueshadow">Синяя тень слева снизу</div>
+        <div class="blur">Синее размытие</div>
 
     </main>
     
