--- a/lab4.html
+++ b/lab4.html
@@ -15,7 +15,19 @@
             width: 500px;
             height: 120px;
             overflow-y:auto ;
-            overflow-x:hidden ;
+            overflow-x:hidden;
+            position: relative;
+            background: coral;
+            z-index: 2;
+        }
+        .second {
+            z-index: 1;
+            left: 380px;
+            top: 120px;
+            position: fixed;
+        }
+        .second:hover {
+            z-index: 3;
         }
     </style>
 </head>
@@ -35,7 +47,7 @@
             и главное – почему. Всё расставлено по возрастанию сложности: как в учебнике, только интересно.
         </div>
 
-        <div>
+        <div class="second">
             В первой главе я задаю тон всей книге: это в первую очередь развлечение для скучающих гопников-интеллектуалов. 
             Мы с моими маленькими читателями попробуем представить себе мир 
             как инженерную схему, этакий мысленный каркас. Я пишу о том, что бывает, когда схема несовершенна, и почему 
