--- a/lab4.html
+++ b/lab4.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Крышева В.Д. Лабораторная 3</title>
+    <title>Крышева В.Д. Лабораторная 4</title>
     <link rel="stylesheet" href="main.css">
     <style>
-        div {
+        main div {
             margin: 20px;
             border: 1px solid;
             border-radius: 7 px;
@@ -17,7 +17,7 @@
             overflow-y:auto ;
             overflow-x:hidden;
             position: relative;
-            background: coral;
+            background: rgb(236, 104, 208);
             z-index: 2;
         }
         .second {
@@ -29,6 +29,30 @@
         .second:hover {
             z-index: 3;
         }
+        aside {
+            position: absolute;
+            left: 0;
+            width: 300px;
+            background: rgb(254, 53, 191);
+            height: 100%;
+            overflow: auto;
+            z-index: 1;
+        }
+        aside div {
+            color: #070107;
+            padding: 10px;
+            text-align: center;
+            text-indent: 20px;
+        }
+        main {
+            margin-left: 320px;
+        }
+        footer {
+            position: fixed;
+            left: 0%;
+            right: 0%;
+            bottom: 0%;
+        }
     </style>
 </head>
 
@@ -36,6 +60,29 @@
     <header> 
         НГТУ, ФБ, Лабораторная работа 3
     </header>
+
+    <aside>
+        <div>Об этой книге</div>
+
+        <div>
+            Люди без экономического образования зачастую не понимают базовых вещей, потому что в их представлении 
+            финансы – это что-то из области бухгалтерии. Пыльные папки с подписями «счета-фактуры», мрачные тётки 
+            с гнездом аиста на голове, у них ещё вечно ломается виндоуз, а «принтер печатает крякозябры, 
+            Юра-компьютерщик, помоги, у нас ничего не работает, я говорю, ничего не работает, ты что, идиот?», 
+            чудовищная программа «1С-Бухгалтерия», от одного вида которой нормальному человеку делается плохо, 
+            проверки налоговой инспекции с выносом коробок из-под ксерокса, «брат жены работает в «Газпроме» и 
+            говорит, что скоро дефолт, что делать?». Я объясню жертвам этой парадигмы, что финансы к этим явлениям 
+            не имеют никакого отношения. Финансовые рынки – это в первую очередь интересно.
+        </div>
+
+        <div>
+            Как работает мировая закулиса? Когда будет дефолт (и почему его не будет)? Зачем человеку облигации? 
+            Как устроена компания Уоррена Баффета и почему именно так? Это всё интересные вопросы, 
+            но суровые тётки с синими волосами наложили на них печать таинственности и присыпали полезные 
+            знания нафталином. Я хочу рассказать, как всё обстоит на самом деле. У меня есть чит-коды.
+        </div>
+
+    </aside>
 
     <main>
         <div>
