--- a/lab4.html
+++ b/lab4.html
@@ -53,6 +53,25 @@
             right: 0%;
             bottom: 0%;
         }
+        .talk {
+            width: 32px;
+            height: 32px;
+            padding: 20px;
+            font-style: italic;
+            font-weight: bold;
+            font-size: 18px;
+            text-align: center;
+            background-color: azure;
+            color: #070107;
+            border: 5px solid;
+            border-style: dotted;
+            border-radius: 65px;
+            box-shadow: 10px 5px 5px blueviolet;
+            position: absolute;
+            overflow: none;
+            left: 800px;
+            top: 600px;
+        }
     </style>
 </head>
 
@@ -117,6 +136,13 @@
             Как они проникают в кресла председателей правления? Почему Карл Айкан их ловит и анально карает? 
             Чем Америка похожа на тазик с бухлом? Без сомнения, откровений тут будет много.
         </div>
+
+            <img src="C:\Users\dmitr\OneDrive\Рабочий стол\Бэндер\Бэндер.jpg">
+            <div class="talk" style="left: 899px; top: 700px; padding: 8px"></div>
+            <div class="talk" style="left: 960px; top: 650px"></div>
+            <div class="talk" style="left: 1043px; width: 200px; 
+            padding: 19px; height: 120px; top: 532px;">Не забывайте про правила хорошего тона. <br>
+            Вилки в левый карман, ложки — в правый!</div>
     </main>
 
     <footer>
