--- a/lab5.html
+++ b/lab5.html
@@ -6,13 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крышева В.Д. Лабораторная работа 5</title>
     <link rel="stylesheet" href="main.css">
+    <script>
+        function showSum() {
+            let a = 5154;
+            let b = 7891;
+            let result = a + b;
+            alert('Сумма '+ a +' и '+ b +' равна ' + result)
+        }
+    </script>
+    <style>
+        .message {
+            height: 25px;
+            width: 254px;
+            background: whitesmoke;
+            border: 1px solid;
+            border-radius: 3px;
+            color: brown;
+            font-size: large;
+            display: inline-block;
+            text-align: center;
+            cursor: pointer;
+            padding: 11px;
+        }
+    </style>
 </head>
 <body>
     <header> 
         НГТУ, ФБ, Лабораторная работа 5
     </header>
     <main>
-
+        <div class="message" onclick="showSum()">Сколько будет 5154+7891?</div>
+        <div class="message">Узнать, кто автор страницы</div>
     </main>
     <footer>
         &copy; Крышева В.Д., ФБИ-12, 2 курс, 2023
