--- a/lab5.html
+++ b/lab5.html
@@ -13,6 +13,10 @@
             let result = a + b;
             alert('Сумма '+ a +' и '+ b +' равна ' + result)
         }
+        function showAuthor() {
+            let author = 'Автор страницы:\nКрышева Виктория Дмитриевна\n Че как дела вообще?';
+            alert(author)
+        }
     </script>
     <style>
         .message {
@@ -31,14 +35,14 @@
     </style>
 </head>
 <body>
-    <header> 
+    <header onclick="showAuthor()"> 
         НГТУ, ФБ, Лабораторная работа 5
     </header>
     <main>
         <div class="message" onclick="showSum()">Сколько будет 5154+7891?</div>
-        <div class="message">Узнать, кто автор страницы</div>
+        <div class="message" onclick="showAuthor()">Узнать, кто автор страницы</div>
     </main>
-    <footer>
+    <footer onclick="showAuthor()">
         &copy; Крышева В.Д., ФБИ-12, 2 курс, 2023
     </footer>
 </body>
