--- a/lab5.html
+++ b/lab5.html
@@ -8,14 +8,36 @@
     <link rel="stylesheet" href="main.css">
     <script>
         function showSum() {
-            let inputA = document.getElementById('numberA')
-            let inputB = document.getElementById('numberB')
-
-
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
             let a = parseInt(inputA.value);
             let b = parseInt(inputB.value);
             let result = a + b;
-            alert('Сумма '+ a +' и '+ b +' равна ' + result)
+            alert('Сумма '+ a +' и '+ b +' равна ' + result);
+        }
+        function showRaz() {
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
+            let a = parseInt(inputA.value);
+            let b = parseInt(inputB.value);
+            let result = a - b;
+            alert('Разность '+ a +' и '+ b +' равна ' + result);
+        }
+        function showPro() {
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
+            let a = parseInt(inputA.value);
+            let b = parseInt(inputB.value);
+            let result = a * b;
+            alert('Произведение '+ a +' и '+ b +' равно ' + result);
+        }
+        function showDel() {
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
+            let a = parseInt(inputA.value);
+            let b = parseInt(inputB.value);
+            let result = a / b;
+            alert('Деление '+ a +' и '+ b +' равно ' + result);
         }
         function showAuthor() {
             let author = 'Автор страницы:\nКрышева Виктория Дмитриевна\n Че как дела вообще?';
@@ -46,6 +68,9 @@
         <label>Первое число: <input type="number" value="5154" id="numberA"></label><br>
         <label>Второе число: <input type="number" value="7891" id="numberB"></label><br>
         <div class="message" onclick="showSum()">Найти сумму чисел</div>
+        <div class="message" onclick="showRaz()">Найти разность чисел</div>
+        <div class="message" onclick="showPro()">Найти произведение чисел</div>
+        <div class="message" onclick="showDel()">Найти деление чисел</div>
         <div class="message" onclick="showAuthor()">Узнать, кто автор страницы</div>
     </main>
     <footer onclick="showAuthor()">
