--- a/lab5.html
+++ b/lab5.html
@@ -43,6 +43,13 @@
             let author = 'Автор страницы:\nКрышева Виктория Дмитриевна\n Че как дела вообще?';
             alert(author)
         }
+        function changeOutput(buttonNum, backColor, textColor, borderColor) {
+            let output =  document.getElementById('output');
+            output.innerHTML = 'Нажата кнопка ' + buttonNum ;
+            output.style.backgroundColor = backColor;
+            output.style.color = textColor;
+            output.style.border = borderColor;
+        }
     </script>
     <style>
         .message {
@@ -58,6 +65,11 @@
             cursor: pointer;
             padding: 11px;
         }
+        #output {
+            border: 1px solid;
+            width: 300px;
+            height: 40px;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +84,15 @@
         <div class="message" onclick="showPro()">Найти произведение чисел</div>
         <div class="message" onclick="showDel()">Найти деление чисел</div>
         <div class="message" onclick="showAuthor()">Узнать, кто автор страницы</div>
+
+        <div>
+            <input type="button" value="Кнопка 1" onclick = "changeOutput(1, 'red', 'yellow', '3px solid black')">
+            <input type="button" value="Кнопка 2" onclick = "changeOutput(2, 'black', 'lime', '3px solid pink')"> 
+            <input type="button" value="Кнопка 3" onclick = "changeOutput(3, 'white', 'red', '3px solid blue')">
+            <input type="button" value="Кнопка 4" onclick = "changeOutput(4, 'pink', 'purple', '3px solid grey')">
+        </div>
+
+        <div id="output"></div>
     </main>
     <footer onclick="showAuthor()">
         &copy; Крышева В.Д., ФБИ-12, 2 курс, 2023
