--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="lab5.html" target="_blank">Лабораторная работа 4</a>
             </li>
+            <li>
+                <a href="lab6.html" target="_blank">Лабораторная работа 4</a>
+            </li>
         </ol>
     </main>
 
