--- a/lab6.html
+++ b/lab6.html
@@ -80,7 +80,75 @@
             document.getElementById('color-name').innerHTML = 'желтый';
            }
         }
+        // function move(div) {
+        //    if( div.style.left == '100px'){
+        //     div.style.left = '900px';
+        //     div.style.transform = 'rotate(0)';
+        //    }
+        //    else if (div.style.left =='900px') {
+        //     // div.style.transform = 'rotate(0)'
+        //     div.style.left = '100px';
+        //     div.style.transform = 'rotate(4turn)';
+        //    }
+        //    else {
+        //     div.style.left = '100px'
+        //     div.style.transform = 'rotate(0)'
+        //    }
+        // }
+        function boom(div) {
+            // // width = bodyInnerWidth + 'px'; 
+            // // let width = div.offsetWidth;
+            // element = getElementById('boom')
+            // let width = element.offsetWidth;
+            // // let width = div.style.width;
+            // if (width < '1000px'){
+            //     element.style.width = `${width + 50}px`;
+            //     // width += 50;
+            //     // let h= width + 'px';
+            //     // element.style.width = h;
+            // }
+            // else {
+            //     element.style.width = '100px';
+            // }
+            let bodyInnerWidth = div.offsetWidth + 50;
+            if (bodyInnerWidth >= 1000) bodyInnerWidth = 100;
+            div.style.width = bodyInnerWidth + 'px';
+            div.textContent = bodyInnerWidth + 'px';
+        }
+        function filter() {
+            let color = document.getElementById('wear-color').value;
+            let type = document.getElementById('wear-type').value;
+            let wear = document.getElementById('wear');
 
+            if (color =='Красный' && type == 'Футболка') {
+                wear.src = 'red f.jpg';
+            }
+            else if (color =='Красный' && type == 'Поло') {
+                wear.src = 'red-P.jpg'
+            }
+            else if (color =='Красный' && type == 'Майка') {
+                wear.src = 'red m.jpg'
+            }
+            else if (color =='Черный' && type == 'Футболка') {
+                wear.src = 'black f.jpg'
+            }
+            else if (color =='Черный' && type == 'Поло') {
+                wear.src = 'black p.jpg'
+            }
+            else if (color =='Черный' && type == 'Майка') {
+                wear.src = 'black m.jpg'
+            }
+            else if (color =='Белый' && type == 'Футболка') {
+                wear.src = 'white f.jpg'
+            }
+            else if (color =='Белый' && type == 'Поло') {
+                wear.src = 'white p.jpg'
+            }
+            else {
+                wear.src = 'white m.jpg'
+            }
+        
+        }
     </script>
     <style>
         .game {
@@ -112,7 +180,54 @@
         }
         .color {
             border: 2px solid;
-            color: rgb(0, 164, 209);
+            color: rgb(40, 7, 255);
+            border-color: darkmagenta;
+            font-size: 14px;
+            padding: 15px;
+            height: min-content;
+            width: 242px;
+            /* margin: 10px auto; */
+            font-weight: bold;
+            background-color: yellow; 
+            text-align: center;  
+        }
+        /* .block {
+            cursor: pointer;
+            border: 2px solid;
+            color: rgb(25, 0, 255);
+            border-color: darkmagenta;
+            font-size: 14px;
+            padding: 15px;
+            height: 150px;
+            width: 150px;
+            background-color: aquamarine;
+            margin: 10px;
+            position: absolute;
+            text-align: center;
+            transition: 6s;
+            left: 100px; 
+        } */
+        .block2 {
+            cursor: pointer;
+            border: 2px solid;
+            color: rgb(40, 7, 255);
+            border-color: darkmagenta;
+            font-size: 14px;
+            padding: 15px;
+            height: 50px;
+            width: 100px;
+            /* margin: 10px auto; */
+            font-weight: bold;
+            background-color: rgb(0, 255, 0); 
+            text-align: center; 
+            /* position: relative; */
+            margin: 10px auto;
+        }
+        .filter {
+            border: 2px solid;
+            border-radius: 8px;
+            background-color: fuchsia;
+            color: azure;
             border-color: darkmagenta;
             font-size: 14px;
             padding: 15px;
@@ -120,7 +235,7 @@
             width: 242px;
             margin: 10px auto;
             font-weight: bold;
-            background-color: yellow;   
+            text-align: center;
         }
     </style>
 </head>
@@ -158,7 +273,7 @@
             </div>
         </div>
 
-        <div onclick="roolesOne()" class="rooles">
+        <!-- <div onclick="roolesOne()" class="rooles">
             <button>Показать правила игры</button>
         </div>
 
@@ -172,13 +287,41 @@
                 <li>Если вам написали "Вы ввели слишком маленькое число" - введите число больше</li>
                 <li>Если вам написали "Введите число от 1 до 100!" - выполните это условие </li>
             </ol>
-        </div>
+        </div> -->
 
-        <div class="color" ondblclick="changeColor(this)">
+        <!-- <div class="color" ondblclick="changeColor(this)">
             Color: <span id="color-name">yellow</span><br>
             Сделайте двойной щелчок, чтобы изменить!
+        </div> -->
+
+       
+        <!-- <div class="block" onclick="move(this)">
+            Щелкни меня 
+        </div> -->
+
+        <div class="block2" onclick="boom(this)"></div>
+
+        <div class="filter">
+            Цвет одежды:
+            <select id="wear-color">
+                <option>Красный</option>
+                <option>Белый</option>
+                <option>Черный</option>
+            </select><br>
+
+            Тип одежды:
+            <select id="wear-type">
+                <option>Футболка</option>
+                <option>Поло</option>
+                <option>Майка</option>
+            </select><br>
+
+            <button onclick="filter()">ОК</button><br>
+
+            <img id="wear" style="width: 150px;height: 150px; ; border: 3px solid; margin: 3px">
         </div>
 
+        <!-- <img src="C:\Users\dmitr\OneDrive\Рабочий стол\футболки\red f.jpg"> -->
     </main>
 
     <footer>
