--- a/lab7.html
+++ b/lab7.html
@@ -16,6 +16,25 @@
                 blocks.appendChild(block)
             }
         }
+        function showExchange(){
+            let exchange = [49.6231, 49.5620, 50.0796, 49.7057, 49.0170,
+                            49.1355, 49.8457, 50.6911, 50.3941, 50.8641];
+            let table = document.getElementById('dollar-exchange');
+            for(let i = 0; i < exchange.length; i++) {
+                let tr = document.createElement('tr');
+                let td = document.createElement('td');
+                td.innerHTML = exchange[i];
+                tr.appendChild(td);
+                table.appendChild(tr);
+
+            }
+            let sum = 0;
+            for (let i= 0; i < exchange.length;i++) {
+                sum = sum + exchange[i];
+            }
+            let average = sum / exchange.length;
+            document.getElementById('detail').innerHTML = 'Среднее значение: ' + average;
+        }
 
     </script>
     <style>
@@ -31,6 +50,11 @@
     <main>
         <button onclick="addBlocks()">Создать блоки</button>
         <div id="blocks"></div>
+
+        <button onclick="showExchange()">Курс доллара</button>
+        <table border="1" id="dollar-exchange"></table>
+        
+        <div id="detail"></div>
 
     </main>
 
