--- a/lab7.html
+++ b/lab7.html
@@ -36,9 +36,26 @@
             document.getElementById('detail').innerHTML = 'Среднее значение: ' + average;
         }
 
+        function addTransparentBlocks() {
+            let blocks = document.getElementById('transparent-blocks');
+            for(let opacity = 0; opacity < 10; opacity++){
+                let block = document.createElement('div');
+                block.style.opacity = (opacity * 10 + '%');
+                block.style.width = '30px';
+                block.style.height = '30px';
+                block.style.background = 'black';
+                block.style.margin = '5px';
+                blocks.appendChild(block);
+            }
+        }
+
     </script>
     <style>
-        
+        /* .bloki {
+            width: 30px;
+            height: 30px;
+            background-color: blue;
+        } */
 
     </style>
 </head>
@@ -54,7 +71,10 @@
         <button onclick="showExchange()">Курс доллара</button>
         <table border="1" id="dollar-exchange"></table>
         
-        <div id="detail"></div>
+        <div id="detail"></div><br>
+
+        <button onclick="addTransparentBlocks()">Создать полупрозрачные блоки</button>
+        <div id="transparent-blocks"></div>
 
     </main>
 
